[tool.poetry]
name = "cineplex-scraper"
version = "0.1.0"
description = ""
authors = ["athach <alcthach@gmail.com>"]
readme = "README.md"
packages = [{include = "cineplex_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
